--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-typescript-json-type",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "Generates a type with all json paths for the configured files",
   "homepage": "",
   "author": {
@@ -66,7 +66,10 @@
       "prettier"
     ]
   },
-  "repository": "Tyderion/webpack-typescript-json-type",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com:Tyderion/webpack-typescript-json-type.git"
+  },
   "jest": {
     "testEnvironment": "node"
   },
