Move to typescript and compile into dist folder

--- a/package.json
+++ b/package.json
@@ -9,24 +9,25 @@
     "url": ""
   },
   "files": [
-    "lib"
+    "lib", "dist"
   ],
-  "main": "lib/index.js",
+  "main": "dist/index.js",
   "keywords": [
     "typescript",
     "webpack",
     "i18n"
   ],
   "devDependencies": {
-    "nsp": "^2.6.3",
     "eslint": "^4.1.0",
-    "prettier": "^1.7.0",
-    "husky": "^0.14.3",
-    "lint-staged": "^4.2.1",
     "eslint-config-prettier": "^2.4.0",
-    "eslint-plugin-prettier": "^2.2.0",
     "eslint-config-xo": "^0.18.2",
-    "jest": "^22.0.6"
+    "eslint-plugin-prettier": "^2.2.0",
+    "husky": "^0.14.3",
+    "jest": "^22.0.6",
+    "lint-staged": "^4.2.1",
+    "nsp": "^2.6.3",
+    "prettier": "^1.7.0",
+    "typescript": "^2.6.2"
   },
   "scripts": {
     "prepublish": "nsp check",
@@ -73,5 +74,9 @@
   "jest": {
     "testEnvironment": "node"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@types/node": "^9.4.0",
+    "tslib": "^1.9.0"
+  }
 }
