--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "url": "https://github.com/Tyderion"
   },
   "files": [
-    "lib", "dist"
+    "lib",
+    "dist"
   ],
   "main": "dist/index.js",
   "keywords": [
@@ -18,6 +19,7 @@
     "i18n"
   ],
   "devDependencies": {
+    "@types/node": "^9.4.0",
     "eslint": "^4.1.0",
     "eslint-config-prettier": "^2.4.0",
     "eslint-config-xo": "^0.18.2",
@@ -76,7 +78,6 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@types/node": "^9.4.0",
     "tslib": "^1.9.0"
   }
 }
